# KissaBot

./: Cargo.toml  README.md  init.lua  justfile
examples/kissa-plugin-example/: Cargo.toml
examples/kissa-plugin-example/src/: lib.rs
kissa/: Cargo.toml
kissa-satori/: Cargo.toml
kissa-satori/src/: api.rs  event.rs  lib.rs  resources.rs
kissa-topic/: Cargo.toml
kissa-topic/src/: adapter.rs  context_ext.rs  event.rs  kissa.rs  lib.rs  message.rs  plugin.rs
kissa/src/: lib.rs
src/: event_ext.rs  lib.rs  main.rs
test_plugin/: Cargo.toml
test_plugin/src/: lib.rs
test_plugin_2/: Cargo.toml
test_plugin_2/src/: lib.rs
