[package]
name = "kissabot"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3.4.4"
kissa-topic = { path = "kissa-topic" }
kissa-satori = { path = "kissa-satori" }
libloading = "0.8.3"
colog = "1.3.0"

[workspace]
members = [ "examples/kissa-plugin-example","kissa-satori", "kissa-topic"]
