[package]
name = "kissa-topic"
version = "0.1.0"
edition = "2021"

[dependencies]
flume = "0.11.0"
kokoro-neo = { git = "https://github.com/kokoro-rs/kokoro.git", branch = "neo" }
kissa-satori = { path = "../kissa-satori" }
serde = { version = "1.0.201", features = ["derive"] }
dashmap = { version = "5.5.3", features = ["rayon"] }
rayon = "1.10.0"
log = "0.4.21"
